--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,1 +1,11 @@
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>My Original Work</title>
+    </head>
+    <body>
+        <h1>Kylie's Original Work</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
+    </body>
+</html>
