--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,8 +4,9 @@
         <title>My Original Work</title>
     </head>
     <body>
-        <h1>Kylie's Original Work</h1>
+        <h1>Kylie's Original Work: Newbie</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe scr="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=software+ companies&aq=0&oq=software&sll=47.670993,-122.344752&sspn=0.263556,0.676346& ie=UTF8&hq=software+companies&hnear=&t=m&ll=47.670993,-122.344752&spn=0.263556,0.676346 &output=embed"></iframe>
 
     </body>
 </html>
