--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Kylie's Original Work: Newbie</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <iframe scr="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=software+ companies&aq=0&oq=software&s" ll=47.670993,-122.344752& sspn=0.263556,0.676346& ie=UTF8& hq=software+companies& hnear=& t=m& ll=47.670993,-122.344752& spn=0.263556,0.676346& output=embed style="width:300px; height:300px";></iframe>
+        <iframe scr="https://maps.google.com/maps?" f=q& source=s_q& hl=en& geocode=& q=software+companies& aq=0& oq=software& ll=47.670993,-122.344752& sspn=0.263556,0.676346& ie=UTF8& hq=software+companies& hnear=& t=m& ll=47.670993,-122.344752& spn=0.263556,0.676346& output=embed style="width:300px; height:300px";></iframe>
         <img src= "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj1kcq6k_HdAhXiCTQIHSgoBx0QjRx6BAgBEAU&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F511299363928116554%2F&psig=AOvVaw3bRC_Cv49UceL5lUIKUjq7&ust=1538892478661869" alt= Memethatdoesntseemtoshowupanditisfrustrating style="width:300px; height:300px">
     </body>
 </html>
